# educational-platform

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.full.yml  docker-compose.dev.yml  docker-compose.messaging.yml  docker-compose.monitoring.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  setup.cfg
api-gateway/: Dockerfile
api-gateway/app/: main.py
api-gateway/scripts/: setup.bat
api_gateway/: .env.example  pyproject.toml
api_gateway/app/: main.py
api_gateway/scripts/: commands.py  setup.sh
app/: .env.example  README.md  docker-compose.yml  docker-entrypoint.sh  main.py
app/auth_service/: .env-example  requirements.txt
app/core/: handlers.py  lifespan.py  logging.py  scheduler.py  security.py  types.py
app/models/: __init__.py
app/registration_service/: .env-example
app/routes/: __init__.py
app/schemas/: __init__.py
app/services/: __init__.py
auth-service/: .env.example  Dockerfile  docker-entrypoint.sh  pyproject.toml
auth-service/app/: main.py
auth-service/scripts/: commands.py  setup.bat  setup.ps1
backend/: Dockerfile  requirements.txt
backend/app/: main.py  router.py
docs/: README.md  about.md  alembic.md  circular_import.md  dev_tools.md  development.md  get_current_user.md  imports_guide.md  mail.md  models.md  oauth-providers.md  oauth.md  pgadmin.md  pre-commit.md  rabbitmq.md  redis_commander.md  registration.md  schemes.md  structure.md  ygpt.md
loki/: loki-entrypoint.sh
monitoring/grafana/: Dockerfile  grafana-entrypoint.sh
monitoring/loki/: Dockerfile
monitoring/promtail/: Dockerfile  promtail.yaml  (+3 more)
registration_service/: .env.example  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
registration_service/api/: main.py
registration_service/api/core/config/: __init__.py  app_config.py  env_config.py
registration_service/api/core/database/: session.py
registration_service/api/core/database/migrations/: env.py
registration_service/api/core/database/migrations/versions/: 7861d532d4d2_initial_migrate.py
registration_service/api/errors/v1/: base.py  users.py
registration_service/api/middlewares/: logging.py
registration_service/api/models/v1/: base.py  users.py
registration_service/api/routers/: __init__.py
registration_service/api/routers/v1/: __init__.py  health.py  registration.py
registration_service/api/schemas/v1/: base.py  users.py
registration_service/api/services/v1/: base.py  users.py
scripts/: commands.py  setup.bat  setup.ps1  setup.sh
tests/: conftest.py
(+297 files in other folders)
