[project]
name = "educational-platform"
version = "0.1.0"
description = "Educational platform for students"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "aio-pika>=9.5.4",
    "aioboto3>=13.2.0",
    "aiohttp>=3.11.11",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "argon2-cffi>=23.1.0",
    "asyncpg>=0.30.0",
    "bcrypt>=4.2.1",
    "fastapi[all]>=0.115.6",
    "passlib>=1.7.4",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.1",
    "python-jose>=3.3.0",
    "pytz>=2024.2",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.36",
    "tenacity>=9.0.0",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "mypy",
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
echo = "scripts.commands:echo"
dev = "scripts.commands:dev"
prod = "scripts.commands:prod"
migrate = "scripts.commands:migrate"
create_migration = "scripts.commands:create_migration"
rollback = "scripts.commands:rollback"
lint = "scripts.commands:lint"
format = "scripts.commands:format"
check = "scripts.commands:check"
test = "scripts.commands:test"
serve = "scripts.commands:serve"
start = "scripts.commands:start_all"
infra-up = "scripts.commands:infra_up"
infra-down = "scripts.commands:infra_down"
infra-build = "scripts.commands:infra_build"
infra-logs = "scripts.commands:infra_logs"
infra-restart = "scripts.commands:infra_restart"

[tool.setuptools]
packages = ["app", "scripts"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
