[project]
name = "registration-service"
version = "0.1.0"
description = "Registration service for educational platform"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "bcrypt>=4.2.1",
    "fastapi[all]>=0.115.6",
    "passlib>=1.7.4",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.1",
    "pytz>=2024.2",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.34.0",
]
